force-app/main/default/objects/Translation_Setting__mdt/Translation_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for connecting with translation api</description>
    <label>Translation Setting</label>
    <pluralLabel>Translation Settings</pluralLabel>
</CustomObject>