force-app/main/default/objects/Translation_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the record is active and in use</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>