force-app/main/default/objects/Translation_Setting__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <description>The api key used to access resources from the api</description>
    <label>Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>