force-app/main/default/objects/Translation_Setting__mdt/fields/Api_Sig__c.field-meta.xml
<CustomField>
    <fullName>Api_Sig__c</fullName>
    <description>The api signature used to access resources from the api</description>
    <label>Api Sig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>