force-app/main/default/objects/Translation_Setting__mdt/fields/Production_Url__c.field-meta.xml
<CustomField>
    <fullName>Production_Url__c</fullName>
    <description>The base url of the production environment</description>
    <label>Production Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>