force-app/main/default/objects/Translation_Setting__mdt/fields/Sandbox_Url__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Url__c</fullName>
    <description>The base url for the sandbox environment</description>
    <label>Sandbox Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>