force-app/main/default/objects/Translation_Setting__mdt/fields/Use_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Use_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not to use the sandbox url for translation processing</description>
    <label>Use Sandbox</label>
    <type>Checkbox</type>
</CustomField>