force-app/main/default/objects/Translation_Setting__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version of the api to access</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>